@@ -3,13 +3,17 @@ package org.englising.com.englisingbe.music.service;
 import lombok.RequiredArgsConstructor;
 import org.englising.com.englisingbe.global.exception.ErrorHttpStatus;
 import org.englising.com.englisingbe.global.exception.GlobalException;
+import org.englising.com.englisingbe.global.util.Genre;
 import org.englising.com.englisingbe.music.dto.TrackAlbumArtistDto;
 import org.englising.com.englisingbe.music.entity.Track;
 import org.englising.com.englisingbe.music.repository.TrackRepository;
 import org.englising.com.englisingbe.music.repository.TrackRepositorySupport;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Random;
 import java.util.stream.Collectors;
 
 @Service
@@ -22,7 +26,7 @@ public class TrackServiceImpl {
         return trackIds.stream()
                 .map(trackId -> trackRepositorySupport.findTrackWithAlbumAndArtistsByTrackId(trackId)
                         .orElseThrow(() -> new GlobalException(ErrorHttpStatus.NO_MATCHING_TRACK)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TrackAlbumArtistDto getTrackAlbumArtistByTrackId(Long trackId) {
@@ -35,7 +39,13 @@ public class TrackServiceImpl {
                 .orElseThrow(() -> new GlobalException(ErrorHttpStatus.NO_MATCHING_TRACK));
     }
 
-    public Track getRandomTrack(){
-        return trackRepository.findRandomTrackWithLyricsAndYoutubeId();
+    public Page<Track> getSearchTrackIds(String keyword, Pageable pageable){
+        return trackRepositorySupport.findByTitleContainingAndYoutubeIdIsNotNullAndOtherConditions(keyword, pageable);
+    }
+
+    public Track getRandomTrack(Genre genre, int limit){
+        Random random = new Random();
+        List<Track> tracks = trackRepositorySupport.findTracksByGenreAndLyricStatus(genre, limit);
+        return tracks.get(random.nextInt(tracks.size()));
     }
 }
